# nrf_blinky_clion

./: CMakeLists.txt  main.c  main.map  nrfcmake.txt  nrfdemo.map
